Add Note: Confirmation on closing modal.

--- a/laravel/resources/assets/less/app.less
+++ b/laravel/resources/assets/less/app.less
@@ -1866,13 +1866,13 @@ body > .popover.top>.arrow:after {
 #members-total {
     .stat,
     .change {
-        color: #eebb40;
+        color: @gold;
         .up,
         .down {
             opacity: 1;
         }
         path {
-            fill: #eebb40;
+            fill: @gold;
         }
     }
 }
@@ -2840,7 +2840,7 @@ a.dp-choose-date {
     appearance: none;
     -moz-appearance: none;
     -webkit-appearance: none;
-    background-color: rgba(236,234,231,1);
+    background-color: @lightgrey;
     border: none;
     border-radius: 0;
     box-shadow: none;
