Add Note: react-select implemented.

--- a/laravel/resources/assets/less/app.less
+++ b/laravel/resources/assets/less/app.less
@@ -6,6 +6,7 @@
 @import (inline) "react-datepicker.min.css";
 @import (inline) "jquery.timepicker.min.css";
 @import "colors";
+@import "react-select/select";
 
 body, p, td, label, .checkbox label {
     color: @darkgrey;
