--- a/laravel/resources/assets/less/new.less
+++ b/laravel/resources/assets/less/new.less
@@ -1,5 +1,7 @@
 @import "colors";
 
+.placeholder { color: #aaa; }
+
 .modal-backdrop.fade.in {
     height:100%;
     position:fixed;
@@ -13,6 +15,8 @@
     .svg-button-content {
         line-height:50%;
         text-align:center;
+		width:100%;
+		height:100%;
         svg {
             display:inline;
             fill:@white;
