User Manage: can select account type. test #473

--- a/laravel/resources/assets/less/app.less
+++ b/laravel/resources/assets/less/app.less
@@ -314,13 +314,16 @@ div.user-wrapper {
                     float: left;
                     font-size: 11px;
                     height: 20px;
-                    width: 50px;
+                    width: 65px;
                 }
                 .email {
                     display: block;
                     font-size: 11px;
                     text-transform: lowercase;
                     margin: 10px 0 3px 0;
+                }
+                .roles {
+                    line-height:20px;
                 }
                 a {
                     // margin-left: 6px;
