User Manage: ff dropdown padding fixed. re #473

--- a/laravel/resources/assets/less/app.less
+++ b/laravel/resources/assets/less/app.less
@@ -315,6 +315,8 @@ div.user-wrapper {
                     font-size: 11px;
                     height: 20px;
                     width: 65px;
+                    padding-left:0;
+                    padding-right:0;
                 }
                 .email {
                     display: block;
