User Manage: add user error message more clear. test #456

--- a/laravel/resources/assets/less/app.less
+++ b/laravel/resources/assets/less/app.less
@@ -248,6 +248,9 @@ div.user-wrapper {
             color: @black;
             font-size: 85%;
         }
+        div.error {
+            color:@red;
+        }
         .plan-title {
             font-size: 150%;
             font-weight: 500;
