Front End: close button X unified. test #474

--- a/laravel/resources/assets/less/app.less
+++ b/laravel/resources/assets/less/app.less
@@ -234,6 +234,12 @@ div.user-wrapper {
             font-weight: 300;
             opacity: 1;
             text-shadow: none;
+            svg {
+                fill:@white;
+                path {
+                    stroke:@white;
+                }
+            }
         }
     }
     h4 {
