--- a/laravel/resources/assets/less/new.less
+++ b/laravel/resources/assets/less/new.less
@@ -78,6 +78,9 @@
                 opacity:0.5;
                 svg {
                     fill:@white;
+                    path {
+                        stroke:@white;
+                    }
                 }
             }
             button.close:hover, button.close:focus {
