Front end icons refreshed. test #457

--- a/laravel/resources/assets/less/new.less
+++ b/laravel/resources/assets/less/new.less
@@ -262,16 +262,16 @@
                         font-weight:600;
                         color:@pink;
                         margin-right:.2em;
-                        .svg-button.circle#remove-category-item {
-                            background-color:@pink;
+                        .remove-category-item {
                             opacity:0;
                             width:12px;
                             height:12px;
                             vertical-align:text-top;
+                            cursor:pointer;
                         }
                     }
                     .category-item:hover,.category-item:focus {
-                        .svg-button.circle#remove-category-item {
+                        .remove-category-item {
                             opacity:1;
                         }
                     }
@@ -655,8 +655,8 @@ table.jCalendar td.no-data {
                         .edit-delete {
                             height:17px;
                             svg.edit-icon {
-                                width:17px;
-                                height:17px;
+                                width:16px;
+                                height:16px;
                                 margin-right:4px;
                                 display:none;
                                 cursor:pointer;
