Notes Calendar height bug on FF, Chrome fixed

--- a/laravel/resources/assets/less/new.less
+++ b/laravel/resources/assets/less/new.less
@@ -127,6 +127,7 @@
                 max-height:1024px;
                 overflow-y:hidden;
                 .rbc-calendar {
+                    height:390px;
                     font-size:14px;
                     background-color:@white;
                     color:@black;
