Calendar for notes: the event dots disappearing bug fixed. re #448

--- a/laravel/resources/assets/less/new.less
+++ b/laravel/resources/assets/less/new.less
@@ -179,6 +179,11 @@
                                             height:4px;
                                             background-color:@cobalt;
                                         }
+                                        .NoteEvent.revealed, 
+                                        .NoteEvent.ShowMore 
+                                        {
+                                            display:inline-block !important;
+                                        }
                                         .NoteEvent {
                                             fill:@cobalt;
                                             display:none;
