Calendar for notes: week or month periods implemented. re #448

--- a/laravel/resources/assets/less/colors.less
+++ b/laravel/resources/assets/less/colors.less
@@ -16,6 +16,7 @@
 @lightmediumgrey: rgba(185,185,185,1);
 @halflightmediumgrey: #d8d8d8;
 @lightgrey: rgba(236,234,231,1);
+@ultralightgrey: rgba(242,242,242,1);
 @white: rgba(255,255,255,1);
 
 @aqua: rgba(88,167,226,1);
