Calendar for notes: calendar modal opens and shows note on ellipses click. re #448

--- a/laravel/resources/assets/less/new.less
+++ b/laravel/resources/assets/less/new.less
@@ -1024,6 +1024,12 @@ table.jCalendar td.no-data {
                             height:51px;
                             overflow-y:auto;
                         }
+                        a.readMore {
+                            cursor:pointer;
+                            position: absolute;
+                            right: 12px;
+                            bottom: 13px;
+                        }
                      }
                 }
             }
