--- a/laravel/resources/assets/less/new.less
+++ b/laravel/resources/assets/less/new.less
@@ -1024,11 +1024,16 @@ table.jCalendar td.no-data {
                             height:51px;
                             overflow-y:auto;
                         }
+                        a.readMore:hover {
+                            font-weight:800;
+                            text-decoration: none;
+                        }
                         a.readMore {
                             cursor:pointer;
                             position: absolute;
-                            right: 12px;
-                            bottom: 13px;
+                            right: 14px;
+                            bottom: 14px;
+                            color:@black;
                         }
                      }
                 }
