Calendar for notes: notes sorting by cat or author is ready. re #448

--- a/laravel/resources/assets/less/new.less
+++ b/laravel/resources/assets/less/new.less
@@ -359,6 +359,7 @@
                              color:@pink;
                              font-weight:600;
                              font-style: italic;
+                             cursor:pointer;
                         }
                     }
                     .edit-delete {
@@ -401,6 +402,7 @@
                         text-align:left;
                         .tag {
                             display:inline-block;
+                            cursor:pointer;
                         }
                     }
                     .channels {
